manifest/multi/deploy-catalog.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: catalog
  labels:
    app: catalog
    app.kubernetes.io/name: catalog
    app.kubernetes.io/component: catalog-spring-boot
    app.kubernetes.io/version: "v2.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: quay.io/rh-ee-yuewu/catalog-spring-boot:v2.0.1
          ports:
            - containerPort: 9000
              protocol: TCP
          imagePullPolicy: Always
          resources: {}
