manifest/multi/deploy-gateway.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gateway
  labels:
    app: gateway
    app.kubernetes.io/name: gateway
    app.kubernetes.io/component: gateway-vertx
    app.kubernetes.io/version: "v2.0.1"
    app.kubernetes.io/part-of: coolstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: quay.io/rh-ee-yuewu/gateway-vertx:v2.0.1
          ports:
            - containerPort: 9090
              protocol: TCP
          imagePullPolicy: Always
          resources: {}
