manifest/multi/deploy-inventory.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: inventory
  labels:
    app: inventory
    app.kubernetes.io/name: inventory
    app.kubernetes.io/component: inventory-quarkus
    app.kubernetes.io/version: "v2.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: quay.io/rh-ee-yuewu/inventory-quarkus:v2.0.1
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          resources: {}
