manifest/multi/deploy-web.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web
  labels:
    app: web
    app.kubernetes.io/name: web
    app.kubernetes.io/component: web-nodejs
    app.kubernetes.io/version: "v2.0.3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: quay.io/rh-ee-yuewu/web-nodejs:v2.0.3
          ports:
            - containerPort: 3000
              protocol: TCP
          imagePullPolicy: Always
          resources: {}
