manifest/multi/svc-catalog.yaml
kind: Service
apiVersion: v1
metadata:
  name: catalog
  labels:
    app: catalog
    app.kubernetes.io/name: catalog
    app.kubernetes.io/component: catalog-spring-boot
    app.kubernetes.io/part-of: coolstore
spec:
  selector:
    app: catalog
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
