manifest/multi/svc-gateway.yaml
kind: Service
apiVersion: v1
metadata:
  name: gateway
  labels:
    app: gateway
    app.kubernetes.io/name: gateway
    app.kubernetes.io/component: gateway-vertx
spec:
  selector:
    app: gateway
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
