manifest/multi/svc-inventory.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  labels:
    app: inventory
    app.kubernetes.io/name: inventory
    app.kubernetes.io/component: inventory-quarkus
spec:
  selector:
    app: inventory
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
