manifest/multi/route-gateway.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gateway
  labels:
    app: gateway
    app.kubernetes.io/name: gateway
    app.kubernetes.io/component: gateway-vertx
    app.kubernetes.io/part-of: coolstore
spec:
  to:
    kind: Service
    name: gateway
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
